# Backend/public/swagger.json
@@ -154,27 +154,34 @@
 						"type": "number",
 						"format": "double"
 					},
-					"username2": {
+					"player2_id": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
+					"guest_username": {
 						"type": "string"
 					},
-					"winner_id": {
-						"type": "number",
-						"format": "double"
+					"status": {
+						"type": "string",
+						"enum": [
+							"pending",
+							"active",
+							"completed",
+							"abandoned"
+						]
 					},
 					"is_public": {
 						"type": "boolean"
 					},
-					"status": {
-						"type": "string"
+					"current_turn": {
+						"type": "number",
+						"format": "double"
 					},
-					"game_state": {
-						"type": "string"
+					"starter": {
+						"type": "boolean"
 					},
 					"created_at": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updated_at": {
 						"type": "string",
 						"format": "date-time"
 					}
@@ -182,35 +189,32 @@
 				"required": [
 					"id",
 					"player1_id",
-					"is_public",
+					"guest_username",
 					"status",
-					"game_state",
-					"created_at",
-					"updated_at"
+					"is_public",
+					"current_turn",
+					"starter",
+					"created_at"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
 			"CreateGameDto": {
 				"properties": {
-					"player1_id": {
-						"type": "number",
-						"format": "double"
-					},
-					"username2": {
-						"type": "string"
-					},
-					"initialState": {
-						"type": "string"
-					},
 					"is_public": {
-						"type": "boolean",
-						"default": false
+						"type": "boolean"
+					},
+					"guest_username": {
+						"type": "string"
+					},
+					"starter": {
+						"type": "boolean"
 					}
 				},
 				"required": [
-					"player1_id",
-					"initialState"
+					"is_public",
+					"guest_username",
+					"starter"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -574,7 +578,7 @@
 					}
 				},
 				"tags": [
-					"Game"
+					"Games"
 				],
 				"security": [
 					{
@@ -592,119 +596,6 @@
 						}
 					}
 				}
-			},
-			"get": {
-				"operationId": "GetAllGames",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/GameResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Game"
-				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
-				"parameters": []
-			}
-		},
-		"/games/{id}": {
-			"get": {
-				"operationId": "GetGame",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/GameResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Game"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/games/public": {
-			"get": {
-				"operationId": "GetPublicGames",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/GameResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Game"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/games/my": {
-			"get": {
-				"operationId": "GetMyGames",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/GameResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Game"
-				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
-				"parameters": []
 			}
 		},
 		"/auth/register": {
@@ -769,6 +660,45 @@
 						}
 					}
 				}
+			}
+		},
+		"/auth/verify": {
+			"get": {
+				"operationId": "VerifyToken",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"userId": {
+											"type": "number",
+											"format": "double"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"userId",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
 			}
 		}
 	},
